<resources>
    <string name="app_name">UniCommunity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_all_boards" translatable="false">AllBoardsActivity</string>
    <string name="title_activity_markdown" translatable="false">MarkdownActivity</string>
    <string name="title_activity_demo" translatable="false">DemoActivity</string>



    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login" translatable="false">Login</string>

    <string name="remember_me">Remember Me</string>
    <string name="button" translatable="false">Button</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="anonymus">Anonymus</string>
    <string name="post">Post</string>
    <string name="forum">Forum</string>
    <string name="comments">Comments</string>
    <string name="subscribe">Subscribe</string>
    <string name="home" translatable="false">Home</string>
    <string name="my_boards" translatable="false">My Boards</string>
    <string name="all_boards" translatable="false">All Boards</string>
    <string name="reports">Reports</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="unsubscribe" translatable="false">Unsubscribe</string>
    <string name="create_blackboard_item">Publish</string>
</resources>
