<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_my_boards"
                android:title="@string/my_boards" />
        <item
                android:id="@+id/nav_all_boards"
                android:title="@string/all_boards" />
        <item
                android:id="@+id/nav_profile"
                android:title="@string/profile" />
        <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
            <item
                    android:id="@+id/nav_send"
                    android:title="@string/send" />
        </menu>
    </item>

</menu>
